--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ python-decouple~=3.4
 django-heroku>=0.3.1
 social-auth-app-django>=3.1.0
 social-auth-core>=3.3.3
+psycopg2==2.8.6
 whitenoise==5.2.0
 gunicorn==19.6.0
 pip~=20.2.4
